# SPDX-License-Identifier: ISC
#
# Copyright (c) 2022 Johnathan C Maudlin <jcmdln@gmail.com>

src_core_c = files('core.c')
src_main_c = files('main.c')
src_printer_c = files('printer.c')
src_reader_c = files('reader.c')

sources += [
  src_core_c,
  src_printer_c,
  src_reader_c,
]

subdir('reader')
